--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-svg-icon": "^16.1.0",
     "ngx-cookie-service": "^16.1.0",
     "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.8.0",
