--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "angular-star-rating": "^7.0.0",
     "angular-svg-icon": "^16.1.0",
+    "css-star-rating": "^1.3.1",
     "ngx-cookie-service": "^16.1.0",
     "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.8.0",
