--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "angular-star-rating": "^7.0.0",
     "angular-svg-icon": "^16.1.0",
+    "chart.js": "^4.4.1",
     "css-star-rating": "^1.3.1",
     "firebase": "^10.7.1",
     "ngx-cookie-service": "^16.1.0",
